--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
       <!-- Add your header image here -->
     </header>
 
+    <h3>Hello World!</h3>
+    <!-- Add your content here -->
 
   </div>
+
   <br><br><br>
+
   <footer>
     <!-- Add your footer message/logo here -->
   </footer>
