--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 
       // PASTE YOUR TEST CODE HERE
 
-      // var User = Parse.Object.extend("User");
-      var user = new Parse.User(); //TODO
+      var user = new Parse.User();
       var newuser = prompt('Type your username:');
       var newemail = prompt('Type your e-mail:');
 
