--- a/sample/index.html
+++ b/sample/index.html
@@ -7,8 +7,9 @@
   <meta content="Back4App Inc" name="author">
 
   <title>Sample App| JavaScript Quickstart | Back4App</title>
-
-
+  
+  <!-- Uncomment these lines to install the SDK -->
+  <!-- <script src="https://unpkg.com/parse/dist/parse.min.js"></script> -->
 
 </head>
 
